# tomorin

./: Cargo.toml  README.md  tomorin.session
src/: args.rs  lib.rs  main.rs
src/bot/: client.rs  cmd.rs  mod.rs
src/conf/: example.kdl  mod.rs
src/eval/: eval.rs  mod.rs  types.rs
