[package]
name = "tomorin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.39"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process"] }
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "rustls-tls-native-roots", "json"] }
grammers-client = "0.7.0"
miette = { version="7.6.0", features=["fancy"] }
knuffel = "3.2.0"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.12.0", features = ["macros"] }
combine = "4.0.1"
unicode-width = "0.2"
htmlescape = "0.3"
regex = "1"
once_cell = "1.21"
